[Project] Upgrading to Java 26